<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.bottomnavigation.main.MainFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/mainGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="chooseInterestButton,inTrendRecyclerView,newRecyclerView,coverCard,inTrendText,forYouRecyclerView,youWatchedCard,watchButton,youWatchedText,newFilmText,forYouText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/coverCard"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cover"
            android:contentDescription="@string/cover"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/gradient"
            android:src="@drawable/empty_image" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/watchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/accent_color"
        android:paddingStart="32dp"
        android:paddingTop="13dp"
        android:paddingEnd="32dp"
        android:paddingBottom="13dp"
        android:text="@string/watch"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/filled_button_shape"
        app:layout_constraintBottom_toBottomOf="@+id/coverCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/inTrendText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/in_trend"
        android:textColor="@color/accent_color"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coverCard" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inTrendRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:scrollbars="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inTrendText"
        tools:listitem="@layout/vertical_item" />

    <TextView
        android:id="@+id/youWatchedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/you_watched"
        android:textColor="@color/accent_color"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inTrendRecyclerView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/youWatchedCard"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youWatchedText">

        <ImageView
            android:contentDescription="@string/you_watched_cover"
            android:id="@+id/youWatchedCover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:background="@android:color/transparent"
            android:foreground="@drawable/gradient" />

        <TextView
            android:id="@+id/filmName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp"
            android:gravity="bottom|start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:contentDescription="@string/play_button"
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/play_button" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/newFilmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/category_new"
        android:textColor="@color/accent_color"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youWatchedCard" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:scrollbars="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newFilmText"
        tools:listitem="@layout/horizontal_item" />

    <TextView
        android:id="@+id/forYouText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/for_you"
        android:textColor="@color/accent_color"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forYouRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:scrollbars="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forYouText"
        tools:listitem="@layout/vertical_item" />

    <Button
        android:id="@+id/chooseInterestButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/filled_button_shape"
        android:backgroundTint="@color/accent_color"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/specify_interest"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forYouRecyclerView" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/mainProgressBar"
        style="?android:attr/progressBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/background"
        android:indeterminateTint="@color/accent_color"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>